--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@ local.properties
 
 # IDE-specific cursor directory
 .cursor/
+
+# Keystore files (never commit these for security)
+keystore/*.jks
+keystore/*.p12
+keystore/*.keystore
+keystore/*-password.txt
+keystore/*.base64
