--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ androidxTestRules = "1.7.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
 kotlin = "2.2.20"
-composeBom = "2025.10.00"
+composeBom = "2025.11.00"
 mlkitTranslate = "17.0.3"
 mlkitTextRecognition = "16.0.1"
 mlkitTextRecognitionChinese = "16.0.1"
@@ -21,7 +21,7 @@ hiltNavigationCompose = "1.3.0"
 ksp = "2.2.20-2.0.2"
 coroutinesPlayServices = "1.10.2"
 camerax = "1.5.1"
-room = "2.8.2"
+room = "2.8.3"
 coroutinesCore = "1.10.2"
 coroutinesTest = "1.10.2"
 datastore = "1.1.7"
@@ -76,10 +76,11 @@ robolectric = { group = "org.robolectric", name = "robolectric", version.ref = "
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+android-lint = { id = "com.android.lint", version.ref = "agp" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 androidx-room = { id = "androidx.room", version.ref = "room" }
-android-library = { id = "com.android.library", version.ref = "agp" }
